compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__record_field_documentation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\npub type Wibble {\n  Wibble(\n    /// This is some documentation about the wibble field.\n    wibble: Int\n  )\n}\n\npub fn wibble(w: Wibble) {\n  w.wibble\n}\n"
---
pub type Wibble {
  Wibble(
    /// This is some documentation about the wibble field.
    wibble: Int
  )
}

pub fn wibble(w: Wibble) {
  w.wibble
  ▔▔▔▔▔▔↑▔
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nInt\n```\n This is some documentation about the wibble field.\n",
    ),
)
